updated village text and added character name validation

--- a/index.html
+++ b/index.html
@@ -8,25 +8,23 @@
 <body>
 
     <main>
+
         <section id="start-screen" class="active">
             <h1>xPloria</h1>
             <p>- A world of adventure -</p>
             <button id="start-btn">Start Game</button>
         </section>
+
         <section id="village">
             <h1>The Village</h1>
-            <p class="one">You awaken in your small village after a wild night of adventuring.  Only... you're not in your bed.  A fellow villager finds you covered in blood and sleeping in his barn.</p>
+            <p class="one">You awaken in your small village after a wild night of adventuring.  Only... you're not in your bed.  A fellow villager finds you covered in blood, sleeping in his barn.</p>
             <p class="two">Startled, the villager yells, <q>Aaaahhh! What kind of demon is this?</q>
             <br>
             <br>
             You reply: </p>
             <p class="three">
                 <q>Uhh... I'm
-                <input type="text" id="name"> the
-                <select name="sex" id="sex">
-                    <option value="boy">boy</option>
-                    <option value="girl">girl</option>
-                </select> from the other side of the village.  The last thing I remember I was out clearing monsters from the village perimeter.  I came upon an old man, but when I approached he faded out of sight like a cloud in the wind.  I fell to the ground and woke up here...</q>
+                <input type="text" id="name"> from the other side of the village.  The last thing I remember I was out clearing monsters from the village perimeter.  I came upon an old man, but when I approached he faded out of sight like a cloud in the wind.  I fell to the ground and woke up here...</q>
                 <br>
                 <button id="intro-next-btn">Next</button>
             </p>
@@ -44,14 +42,21 @@
             <button id="fourth-next-btn">Next</button>
             </p>
         </section>
+
         <section id="market">
             <h1>The Market</h1>
         </section>
+
         <section id="plains"></section>
+
         <section id="caves"></section>
+
         <section id="mountain"></section>
+
         <section id="game-over"></section>
+
         <section id="end-screen"></section>
+
         <audio id="music" loop="true" volume="0.75" loop>
             <source src="sounds/music.mp3" type="audio/mp3">
         </audio>
