fixed jquery file loading and added to Gulp uglify task

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </audio>
     </main>
 
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="dist/js/jquery.min.js"></script>
     <script src="dist/js/main.js"></script>
     <noscript>Your browser does not support JavaScript! Please enable JavaScript to continue.</noscript>
 </body>
