added sounds to dist folder

--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
         <section id="end-screen"></section>
 
         <audio id="music" loop="true" volume="0.75" loop>
-            <source src="sounds/music.mp3" type="audio/mp3">
+            <source src="dist/sounds/music.mp3" type="audio/mp3">
         </audio>
         <audio id="boom" volume="1">
-            <source src="sounds/loud-boom-sound.mp3" type="audio/mp3">
+            <source src="dist/sounds/loud-boom-sound.mp3" type="audio/mp3">
         </audio>
         <audio id="creak" volume="1">
-            <source src="sounds/creaking-door-sound.mp3" type="audio/mp3">
+            <source src="dist/sounds/creaking-door-sound.mp3" type="audio/mp3">
         </audio>
         <audio id="sheath" volume="1">
-            <source src="sounds/sheath-sword-sound.mp3" type="audio/mp3">
+            <source src="dist/sounds/sheath-sword-sound.mp3" type="audio/mp3">
         </audio>
         <audio id="woosh" volume="1">
-            <source src="sounds/whoosh-transition-sound.mp3" type="audio/mp3">
+            <source src="dist/sounds/whoosh-transition-sound.mp3" type="audio/mp3">
         </audio>
     </main>
 
