added sounds to dist folder

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <br>
             <button id="third-next-btn">Next</button>
             </p>
-            <p class="seven"><q>I will find the answers I seek.  And if The Mountain King really has returned... I will destroy him.</q>
+            <p class="seven"><q>I will find the answers I seek.  If The Mountain King really has returned... I will destroy him.</q>
             <br>
             <button id="fourth-next-btn">Next</button>
             </p>
