added correct volume adjustments in js file

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
 
         <section id="end-screen"></section>
 
-        <audio id="music" loop="true" volume="0.75" loop>
+        <audio id="music" loop="true" loop>
             <source src="dist/sounds/music.mp3" type="audio/mp3">
         </audio>
-        <audio id="boom" volume="1">
+        <audio id="boom">
             <source src="dist/sounds/loud-boom-sound.mp3" type="audio/mp3">
         </audio>
-        <audio id="creak" volume="1">
+        <audio id="creak">
             <source src="dist/sounds/creaking-door-sound.mp3" type="audio/mp3">
         </audio>
-        <audio id="sheath" volume="1">
+        <audio id="sheath">
             <source src="dist/sounds/sheath-sword-sound.mp3" type="audio/mp3">
         </audio>
-        <audio id="woosh" volume="1">
+        <audio id="woosh">
             <source src="dist/sounds/whoosh-transition-sound.mp3" type="audio/mp3">
         </audio>
     </main>
