testing preload attribute on sounds

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <section id="end-screen"></section>
 
-        <audio id="music" loop="true" loop>
+        <audio id="music" loop="true" loop preload>
             <source src="dist/sounds/music.mp3" type="audio/mp3">
         </audio>
         <audio id="boom">
