--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <section id="end-screen"></section>
 
         <audio id="music" loop="true" loop preload>
-            <source src="dist/sounds/music.mp3" type="audio/mp3">
+            <source src="dist/sounds/intro.mp3" type="audio/mp3">
         </audio>
         <audio id="boom">
             <source src="dist/sounds/loud-boom-sound.mp3" type="audio/mp3">
