added spear and removed merge conflicts

--- a/index.html
+++ b/index.html
@@ -66,22 +66,14 @@
             <button class="first-next-btn">Next</button>
             </p>
 
-<<<<<<< HEAD
-            <p class="two">Your quest has been laid out before you.  You will seek out The Mountain King and destroy him.  However, you can't rush into the xPlorian wild without weapons and supplies.  Are you ready to leave the village?
-=======
             <p class="two-b">Your quest has been laid out before you.  You will seek out The Mountain King and destroy him.  However, you can't rush into the xPlorian wild without weapons and supplies.  Are you ready to leave the village?
->>>>>>> gh-pages
             <br>
             <button class="first-next-btn">Back to Market</button>
             <br>
             <button id="to-plains">Exit Village</button>
             </p>
 
-<<<<<<< HEAD
-            <p class="two">Here at The Market you find many different vendors.  Choose a shop to enter.
-=======
             <p class="two-a">Here at The Market you find many different vendors.  Choose a shop to enter.
->>>>>>> gh-pages
             <br>
             <button id="blacksmith">Blacksmith</button>
             <br>
@@ -96,18 +88,12 @@
 
             <p class="one">Welcome to the Iron Forge!  Here we sell the finest weapons and armor this side of the mountain.  Please take a look at our wares.</p>
 
-<<<<<<< HEAD
-            <div id="armor">
-=======
             <div id="armor-list">
->>>>>>> gh-pages
                 <h2>- Armor -</h2>
                 <ul>
                     <li class="item">
                         <div id="leather-cap"></div>
                         <span class="name">Leather Cap</span> - Defense: <span class="defense">5</span> - Price: <span class="price">&#x20B9; 10</span>
-<<<<<<< HEAD
-=======
                         <button class="item-btn">Buy</button>
                     </li>
                     <li class="item">
@@ -118,17 +104,12 @@
                     <li class="item">
                         <div id="shield"></div>
                         <span class="name">Sheild</span> - Defense: <span class="defense">10</span> - Price: <span class="price">&#x20B9; 30</span>
->>>>>>> gh-pages
                         <button class="item-btn">Buy</button>
                     </li>
                 </ul>
             </div>
 
-<<<<<<< HEAD
-            <div id="weapons">
-=======
             <div id="weapons-list">
->>>>>>> gh-pages
                 <h2>- Weapons -</h2>
                 <ul>
                     <li class="item">
@@ -141,24 +122,21 @@
                         <span class="name">Axe</span> - Damage: <span class="damage">&plus;10</span> - Price: <span class="price">&#x20B9; 20</span>
                         <button class="item-btn">Buy</button>
                     </li>
+                    <li class="item">
+                        <div id="spear"></div>
+                        <span class="name">Spear</span> - Damage: <span class="damage">&plus;10</span> - Price: <span class="price">&#x20B9; 20</span>
+                        <button class="item-btn">Buy</button>
+                    </li>
                 </ul>
             </div>
-<<<<<<< HEAD
-            <button id="done">Done</button>
-=======
             <button id="done-shopping">Done</button>
->>>>>>> gh-pages
         </section>
 
         <section id="apothecary-store">
             <h1>Black Moon Apothecary</h1>
             <p class="player-money">Total Money: &#x20B9; <span class="amount">50</span></p>
             <p class="one">Welcome to the Black Moon Apothecary!  Here we sell the finest potions this side of the mountain.  Please take a look at our wares.</p>
-<<<<<<< HEAD
-            <div id="potions">
-=======
             <div id="potions-list">
->>>>>>> gh-pages
                 <h2>- Potions -</h2>
                 <ul>
                     <li class="item">
