started store logic.  Added battle cat

--- a/index.html
+++ b/index.html
@@ -93,18 +93,18 @@
                 <ul>
                     <li class="item">
                         <div id="leather-cap"></div>
-                        <span class="name">Leather Cap</span> - Defense: <span class="defense">5</span> - Price: <span class="price">&#x20B9; 10</span>
-                        <button class="item-btn">Buy</button>
+                        <span class="name">Leather Cap</span> - Defense: <span class="defense">5</span> - Price: &#x20B9;<span class="price">10</span>
+                        <button class="buy armor-buy">Buy</button>
                     </li>
                     <li class="item">
                         <div id="armor"></div>
-                        <span class="name">Armor</span> - Defense: <span class="defense">20</span> - Price: <span class="price">&#x20B9; 30</span>
-                        <button class="item-btn">Buy</button>
+                        <span class="name">Armor</span> - Defense: <span class="defense">20</span> - Price: &#x20B9;<span class="price">30</span>
+                        <button class="buy armor-buy">Buy</button>
                     </li>
                     <li class="item">
                         <div id="shield"></div>
-                        <span class="name">Sheild</span> - Defense: <span class="defense">10</span> - Price: <span class="price">&#x20B9; 30</span>
-                        <button class="item-btn">Buy</button>
+                        <span class="name">Sheild</span> - Defense: <span class="defense">10</span> - Price: &#x20B9;<span class="price">30</span>
+                        <button class="buy armor-buy">Buy</button>
                     </li>
                 </ul>
             </div>
@@ -114,18 +114,23 @@
                 <ul>
                     <li class="item">
                         <div id="sword"></div>
-                        <span class="name">Sword</span> - Damage: <span class="damage">&plus;10</span> - Price: <span class="price">&#x20B9; 20</span>
-                        <button class="item-btn">Buy</button>
+                        <span class="name">Sword</span> - Damage: &plus;<span class="damage">10</span> - Price: &#x20B9;<span class="price">20</span>
+                        <button class="buy weapon-buy">Buy</button>
                     </li>
                     <li class="item">
                         <div id="axe"></div>
-                        <span class="name">Axe</span> - Damage: <span class="damage">&plus;10</span> - Price: <span class="price">&#x20B9; 20</span>
-                        <button class="item-btn">Buy</button>
+                        <span class="name">Axe</span> - Damage: &plus;<span class="damage">10</span> - Price: &#x20B9;<span class="price">20</span>
+                        <button class="buy weapon-buy">Buy</button>
                     </li>
                     <li class="item">
                         <div id="spear"></div>
-                        <span class="name">Spear</span> - Damage: <span class="damage">&plus;10</span> - Price: <span class="price">&#x20B9; 20</span>
-                        <button class="item-btn">Buy</button>
+                        <span class="name">Spear</span> - Damage: &plus;<span class="damage">10</span> - Price: &#x20B9;<span class="price">20</span>
+                        <button class="buy weapon-buy">Buy</button>
+                    </li>
+                    <li class="item">
+                        <div id="cat"></div>
+                        <span class="name">Battle Cat</span> - Damage: &plus;<span class="damage">50</span> - Price: &#x20B9;<span class="price">40</span>
+                        <button class="buy weapon-buy">Buy</button>
                     </li>
                 </ul>
             </div>
@@ -141,8 +146,8 @@
                 <ul>
                     <li class="item">
                         <div id="leather-cap"></div>
-                        <span class="name">Healing Potion</span> - Health: <span class="health">10</span> - Price: <span class="price">&#x20B9; 20</span>
-                        <button class="item-btn">Buy</button>
+                        <span class="name">Healing Potion</span> - Health: <span class="health">10</span> - Price: &#x20B9;<span class="price">20</span>
+                        <button class="buy potion-buy">Buy</button>
                     </li>
                 </ul>
             </div>
